2018-04-06	"A businessman is a hybrid of a dancer and a calculator."  (2)

		infra/travis-install-deps.sh :
		- updated commands for tweaking FreeDOS setup for dosemu2

		.travis.yml :
		- disabling ia16-elf builds for the time being

2018-03-05	"A businessman is a hybrid of a dancer and a calculator."

		README.md :
		- updated ia16-elf-g++ URL...

2018-03-04	"Ah say, son, you're about as sharp as a bowlin' ball."

		GNUmakefile ,
		configure :
		- test for target-side `-fno-toplevel-reorder' support

		bin/innocent-pear-front-end.tcc :
		- better error reporting for case where `-wrapper' is not
		  supported (i.e. when using clang)
		- test for target-side `-fno-toplevel-reorder' support

		lolwutconf/ :
		- bumped to e264aa85e4

2018-03-03	ia16-elf-gcc updates. :-)

		infra/travis-build-and-check.sh ,
		infra/travis-install-deps.sh :
		- now uses Ubuntu PPAs for getting binaries for gcc-ia16-elf
		  and dosemu2

		include/innocent-pear/kthxbai.h ,
		include/innocent-pear/lolwut.h ,
		include/innocent-pear/omg.h :
		- "%a3" (e.g.) within __asm causes an `%ss:' override to pop
		  up, so use "%c3" instead

		infra/dosemu-freedos-1.0-bin.tgz :
		- added

		lolwutconf/ :
		- bumped to 1ae66a2f12

2017-11-01	"Less is more or less more"

		include/innocent-pear/omg.h :
		- omg<...>: somewhat increased amount of random stuff at the
		  lowest layers

2017-10-29	"a.out is a misspelling of the French word for ... August." (6)

		infra/travis-install-deps.sh :
		- bumped tag to download ia16-elf-* from, again

2017-10-14	"a.out is a misspelling of the French word for ... August." (5)

		include/innocent-pear/kthxbai.h ,
		include/innocent-pear/omg.h :
		- ia16-elf code may now emit real-mode i80286 instructions
		  such as `sgdt' if it sees compiler macro __IA16_ARCH_I80286

2017-10-13	"a.out is a misspelling of the French word for ... August." (4)

		infra/travis-install-deps.sh :
		- bumped pre-release (tag) to download ia16-elf-* et al. from
