@@ -6,9 +6,9 @@ compiler:
   - gcc
 sudo: required
 env:
-  #- TARGET=ia16-elf
-  #- TARGET=ia16-elf,i80186
-  #- TARGET=ia16-elf,i80286
+  - TARGET=ia16-elf
+  - TARGET=ia16-elf,i80186
+  - TARGET=ia16-elf,i80286
   - TARGET=
     CXX_FOR_TARGET=g++
     CC_FOR_TARGET=gcc
